// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./SpendingLimitLabel.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-171onha"
  >
    <mock-icon
      aria-hidden=""
      class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeMedium mui-style-16hj0i2-MuiSvgIcon-root"
      focusable="false"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
    >
      100 ETH per day
    </p>
  </div>
</div>
`;

exports[`./SpendingLimitLabel.stories OneTime 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-171onha"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
    >
      50 ETH
    </p>
  </div>
</div>
`;

exports[`./SpendingLimitLabel.stories WithCustomLabel 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-171onha"
  >
    <mock-icon
      aria-hidden=""
      class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeMedium mui-style-16hj0i2-MuiSvgIcon-root"
      focusable="false"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 mui-style-10qi7i0-MuiTypography-root"
    >
      Custom spending limit
    </p>
  </div>
</div>
`;
